2007-12-06  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: currently Sys.Web.Extensions is not ready for
	  centum_tests.

2007-12-04  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Added more tests.
	
2007-12-03  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Added 3.5 profile, it probably not used here.

2007-11-28  Raja R Harinath  <harinath@gmail.com>

	* Makefile (_boot_): Incorporate 'net_2_1' into the bootstrap
	process -- it depends on 'net_2_0' profile being built.

2007-07-27  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Removed gmcs and smcs, removed DIST_ONLY_SUBDIRS.

2007-07-27  Jb Evain  <jbevain@novell.com>

	* Makefile: integrate the tuner in the build.

2007-07-26  Jb Evain  <jbevain@novell.com>

	* smcs: add a project of its own for the 2.1 compiler.

2007-07-11  Jb Evain  <jbevain@novell.com>

	* Makefile: work on the 2.1 profile.

2007-05-11  Raja R Harinath  <rharinath@novell.com>

	* Makefile (net_2_0_bootstrap_SUBDIRS): Add 'mcs'.

2007-04-18  Marek Habersack  <grendello@gmail.com>

	* Makefile (SUBDIRS): removed tools/culevel, it is now built in
	the 1.1 bootstrap phase.

2007-04-17  Marek Habersack  <mhabersack@novell.com>

	* Makefile (thisdir): added tools/culevel to the list of
	subdirectories - it must be compiled before compiling the classes
	since System.Web depends on it.

2007-04-06  Wade Berrier  <wberrier@novell.com>

	* Makefile: use bzip2 instead of gzip for 'make dist'
	(even though it's not used here anymore)

2006-08-18  Raja R Harinath  <rharinath@novell.com>

	* Makefile (net_2_0_bootstrap_SUBDIRS): Add 'tools'.

2006-04-11  Raja R Harinath  <rharinath@novell.com>

	* Makefile (SUBDIRS): Remove tools/resgen.

2005-11-21  Raja R Harinath  <rharinath@novell.com>

	* Makefile (net_2_0_bootstrap_SUBDIRS): Add ilasm.
	(net_2_0_SUBDIRS): Likewise.

2005-09-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (basic_SUBDIRS, net_1_1_bootstrap_SUBDIRS)
	(net_2_0_bootstrap_SUBDIRS, net_2_0_SUBDIRS):